--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,10 +30,9 @@ jobs:
       run: npm install
 
     - name: Deploy to Railway
+      run: railway up --service wave-chat-app
       env:
         RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-      run: |
-        curl -sSL https://cli.railway.app/install.sh | sh
-        railway login --token $RAILWAY_TOKEN
-        railway link --project-id b478d2ae-80e5-481b-960a-5872308ffc66
-        railway up
+ 
+ 
+
