--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Install Railway
+      run: npm i -g @railway/cli@latest
+
     - name: Deploy to Railway
       run: railway up --service wave-chat-app
       env:
